优化及Session共享

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,17 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!--添加SpringSession依赖-->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+        <!-- commons-pool2 对象池依赖 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+
         <!--Spring Boot Devools 依赖-->
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
         <dependency>
