--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,27 @@ spring:
     username: root
     password: root
 
-#Redis配置
+#RabbitMq配置
+  rabbitmq:
+    #连接地址
+    host:
+    #连接端口
+    port: 5672
+    #连接用户信息-用户名和密码
+    username: root
+    password: root
+    #开启发布确认
+    publisher-confirm-type: correlated
+    #开启返回模式
+    #开启返回模式-> 将消息返回给原来的交换机
+    publisher-returns: true
+    #消息的确认模式
+    listener:
+      direct:
+        acknowledge-mode: auto
+
+
+  #Redis配置
   redis:
     #连接地址
     host: 127.0.0.1
